feat: remove from queue; thread do_kill implemented; fixed compile errors;